force-app/main/default/objects/OrderItem/fields/ACR_Contracted_Price__c.field-meta.xml
<CustomField>
    <fullName>ACR_Contracted_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACR Contracted Price</label>
    <referenceTo>ST_ACR_Contracted_Price__c</referenceTo>
    <relationshipLabel>Order Products (ACR Contracted Price)</relationshipLabel>
    <relationshipName>Order_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>