force-app/main/default/objects/OrderItem/fields/ACR_Package_type__c.field-meta.xml
<CustomField>
    <fullName>ACR_Package_type__c</fullName>
    <label>ACR Package type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Package 1 : 30K</fullName>
            </value>
            <value>
                <fullName>Package 2 : 60K</fullName>
            </value>
            <value>
                <fullName>Package 3 : 1.2L</fullName>
            </value>
            <value>
                <fullName>Package 4 : 2.5L</fullName>
            </value>
            <value>
                <fullName>Package 5 : 3.5L</fullName>
            </value>
            <value>
                <fullName>Package 6 : 5.0L</fullName>
            </value>
            <value>
                <fullName>Package 7 : 7.5L</fullName>
            </value>
            <value>
                <fullName>Package 8 : 10.0L</fullName>
            </value>
            <value>
                <fullName>Package 9 : 12.5L</fullName>
            </value>
            <value>
                <fullName>Package 10 : 15.0L</fullName>
            </value>
            <value>
                <fullName>Package 11 : 17.5L</fullName>
            </value>
            <value>
                <fullName>Package 12 : 20.0L+&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>