force-app/main/default/objects/OrderItem/fields/ACR_Standard_Price__c.field-meta.xml
<CustomField>
    <fullName>ACR_Standard_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACR Standard Price</label>
    <referenceTo>ST_ACR_Standard_Price__c</referenceTo>
    <relationshipLabel>Order Products (ACR Standard Price)</relationshipLabel>
    <relationshipName>Order_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>