force-app/main/default/objects/OrderItem/fields/ACR_type__c.field-meta.xml
<CustomField>
    <fullName>ACR_type__c</fullName>
    <label>ACR type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACR_Type</valueSetName>
    </valueSet>
</CustomField>