force-app/main/default/objects/OrderItem/fields/Additional_Charges_eSHIP__c.field-meta.xml
<CustomField>
    <fullName>Additional_Charges_eSHIP__c</fullName>
    <label>Total eSHIP Additional Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>