force-app/main/default/objects/OrderItem/fields/BATHeSHIPChargesMap__c.field-meta.xml
<CustomField>
    <fullName>BATHeSHIPChargesMap__c</fullName>
    <label>BATHeSHIPChargesMap</label>
    <type>TextArea</type>
</CustomField>