force-app/main/default/objects/OrderItem/fields/blng__BillableUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>blng__BillableUnitPrice__c</fullName>
    <label>Billable Unit Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>