force-app/main/default/objects/OrderItem/fields/blng__BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>BillingAccountOrderProducts</relationshipName>
    <type>Lookup</type>
</CustomField>