force-app/main/default/objects/OrderItem/fields/blng__BillingGLRule__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingGLRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing GL Rule</label>
    <referenceTo>blng__GLRule__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>BillingGLRuleOrderProducts</relationshipName>
    <type>Lookup</type>
</CustomField>