force-app/main/default/objects/OrderItem/fields/blng__BillingGLTreatment__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingGLTreatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing GL Treatment</label>
    <referenceTo>blng__GLTreatment__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>BillingGLTreatmentOrderProducts</relationshipName>
    <type>Lookup</type>
</CustomField>