force-app/main/default/objects/OrderItem/fields/blng__BillingTreatment__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingTreatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Billing Treatment assigned to this order product.</inlineHelpText>
    <label>Billing Treatment</label>
    <referenceTo>blng__BillingTreatment__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>BillingTreatmentOrderProducts</relationshipName>
    <type>Lookup</type>
</CustomField>