force-app/main/default/objects/OrderItem/fields/blng__BillThroughDateOverride__c.field-meta.xml
<CustomField>
    <fullName>blng__BillThroughDateOverride__c</fullName>
    <label>Bill Through Date Override</label>
    <type>Date</type>
</CustomField>