force-app/main/default/objects/OrderItem/fields/blng__GroupId__c.field-meta.xml
<CustomField>
    <fullName>blng__GroupId__c</fullName>
    <externalId>true</externalId>
    <label>Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>