force-app/main/default/objects/OrderItem/fields/blng__GroupQuantity__c.field-meta.xml
<CustomField>
    <fullName>blng__GroupQuantity__c</fullName>
    <label>Group Quantity (System Field)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>