force-app/main/default/objects/OrderItem/fields/blng__HoldBilling__c.field-meta.xml
<CustomField>
    <fullName>blng__HoldBilling__c</fullName>
    <label>Hold Billing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__HoldBilling</valueSetName>
    </valueSet>
</CustomField>