force-app/main/default/objects/OrderItem/fields/blng__InvoiceGroupId__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceGroupId__c</fullName>
    <label>Invoice Group ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>