force-app/main/default/objects/OrderItem/fields/blng__InvoiceGrouping__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceGrouping__c</fullName>
    <label>Invoice Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__InvoiceGroup</valueSetName>
    </valueSet>
</CustomField>