force-app/main/default/objects/OrderItem/fields/blng__InvoiceRun__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceRun__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Run</label>
    <referenceTo>blng__InvoiceRun__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>InvoiceRunOrderProducts</relationshipName>
    <type>Lookup</type>
</CustomField>