force-app/main/default/objects/OrderItem/fields/blng__InvoiceRunStatusIndex__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceRunStatusIndex__c</fullName>
    <externalId>true</externalId>
    <label>Invoice Run Status (Index)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>