force-app/main/default/objects/OrderItem/fields/blng__LastInvoiceTargetDate__c.field-meta.xml
<CustomField>
    <fullName>blng__LastInvoiceTargetDate__c</fullName>
    <label>Last Invoice Target Date</label>
    <type>Date</type>
</CustomField>