force-app/main/default/objects/OrderItem/fields/blng__NextBillingDate__c.field-meta.xml
<CustomField>
    <fullName>blng__NextBillingDate__c</fullName>
    <inlineHelpText>System generated. The start of the Billing period for the next invoice line for this order product.</inlineHelpText>
    <label>Next Billing Date</label>
    <type>Date</type>
</CustomField>