force-app/main/default/objects/OrderItem/fields/blng__OverrideNextBillingDate__c.field-meta.xml
<CustomField>
    <fullName>blng__OverrideNextBillingDate__c</fullName>
    <label>Override Next Billing Date</label>
    <type>Date</type>
</CustomField>