force-app/main/default/objects/OrderItem/fields/blng__RevenueScheduleStatus__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueScheduleStatus__c</fullName>
    <label>Revenue Schedule Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__RevenueScheduleStatus</valueSetName>
    </valueSet>
</CustomField>