force-app/main/default/objects/OrderItem/fields/blng__TaxCountry__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxCountry__c</fullName>
    <label>Tax Country (Override)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>