force-app/main/default/objects/OrderItem/fields/blng__TaxGLTreatment__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxGLTreatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax GL Treatment</label>
    <referenceTo>blng__GLTreatment__c</referenceTo>
    <relationshipLabel>Order Products (Tax GL Treatment)</relationshipLabel>
    <relationshipName>TaxGLTreatmentOrderProducts</relationshipName>
    <type>Lookup</type>
</CustomField>