force-app/main/default/objects/OrderItem/fields/blng__TaxRule__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Tax Rule assigned to this order product.</inlineHelpText>
    <label>Tax Rule</label>
    <referenceTo>blng__TaxRule__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>TaxRuleOrderProducts</relationshipName>
    <type>Lookup</type>
</CustomField>