force-app/main/default/objects/OrderItem/fields/blng__TaxState__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxState__c</fullName>
    <label>Tax State (Override)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>