force-app/main/default/objects/OrderItem/fields/blng__TaxStreet2__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxStreet2__c</fullName>
    <label>Tax Street 2 (Override)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>