force-app/main/default/objects/OrderItem/fields/blng__TaxTreatment__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxTreatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Tax Treatment assigned to this order product.</inlineHelpText>
    <label>Tax Treatment</label>
    <referenceTo>blng__TaxTreatment__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>TaxTreatmentOrderProducts</relationshipName>
    <type>Lookup</type>
</CustomField>