force-app/main/default/objects/OrderItem/fields/blng__TaxZipCode__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxZipCode__c</fullName>
    <label>Tax Postal Code (Override)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>