force-app/main/default/objects/OrderItem/fields/blng__UniqueId__c.field-meta.xml
<CustomField>
    <fullName>blng__UniqueId__c</fullName>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>