force-app/main/default/objects/OrderItem/fields/blng__UsageFloorQuantity__c.field-meta.xml
<CustomField>
    <fullName>blng__UsageFloorQuantity__c</fullName>
    <label>Usage Floor Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>