force-app/main/default/objects/OrderItem/fields/BVC_Branch__c.field-meta.xml
<CustomField>
    <fullName>BVC_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BVC Branch</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>