force-app/main/default/objects/OrderItem/fields/BVC_CB_COA_BRANCH__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_COA_BRANCH__c</fullName>
    <label>COA BRANCH</label>
    <length>50</length>
    <type>Text</type>
</CustomField>