force-app/main/default/objects/OrderItem/fields/BVC_CB_COA_EXHIBITION_CODE__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_COA_EXHIBITION_CODE__c</fullName>
    <label>COA EXHIBITION CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>