force-app/main/default/objects/OrderItem/fields/BVC_CB_COA_INTERCOMPANY__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_COA_INTERCOMPANY__c</fullName>
    <label>COA INTERCOMPANY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>