force-app/main/default/objects/OrderItem/fields/BVC_CB_COA_PRODUCT__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_COA_PRODUCT__c</fullName>
    <label>COA PRODUCT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>