force-app/main/default/objects/OrderItem/fields/BVC_CB_COA_REVENUE_ACCOUNT_CODE__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_COA_REVENUE_ACCOUNT_CODE__c</fullName>
    <label>COA_REVENUE ACCOUNT CODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>