force-app/main/default/objects/OrderItem/fields/BVC_CB_COA_REVENUE_COST_CENTRE__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_COA_REVENUE_COST_CENTRE__c</fullName>
    <label>COA REVENUE COST CENTRE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>