force-app/main/default/objects/OrderItem/fields/BVC_CB_COA_REVENUE_SUB_ACCOUNT__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_COA_REVENUE_SUB_ACCOUNT__c</fullName>
    <label>COA REVENUE SUB ACCOUNT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>