force-app/main/default/objects/OrderItem/fields/BVC_CB_COAENTITY__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_COAENTITY__c</fullName>
    <label>COA ENTITY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>