force-app/main/default/objects/OrderItem/fields/BVC_CB_ExportPreTaxBillID__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_ExportPreTaxBillID__c</fullName>
    <label>Export Pre Tax Bill</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>