force-app/main/default/objects/OrderItem/fields/BVC_CB_Id__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_Id__c</fullName>
    <label>Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>