force-app/main/default/objects/OrderItem/fields/BVC_CB_InvoiceType__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_InvoiceType__c</fullName>
    <label>InvoiceType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>