force-app/main/default/objects/OrderItem/fields/BVC_CB_LINE_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_LINE_NUMBER__c</fullName>
    <label>LINE NUMBER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>