force-app/main/default/objects/OrderItem/fields/BVC_CB_NatureOfService__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_NatureOfService__c</fullName>
    <label>NatureOfService</label>
    <length>20</length>
    <type>Text</type>
</CustomField>