force-app/main/default/objects/OrderItem/fields/BVC_CB_OracleGLCode__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_OracleGLCode__c</fullName>
    <label>Oracle GL Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>