force-app/main/default/objects/OrderItem/fields/BVC_CB_OracleItemCode__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_OracleItemCode__c</fullName>
    <label>Oracle Item Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>