force-app/main/default/objects/OrderItem/fields/BVC_CB_ReceiptNo__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_ReceiptNo__c</fullName>
    <label>Receipt No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>