force-app/main/default/objects/OrderItem/fields/BVC_CB_Remarks__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_Remarks__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>