force-app/main/default/objects/OrderItem/fields/BVC_CB_SalesforceCharge__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_SalesforceCharge__c</fullName>
    <label>Salesforce Charge</label>
    <length>50</length>
    <type>Text</type>
</CustomField>