force-app/main/default/objects/OrderItem/fields/BVC_CB_SGSTTaxRate__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_SGSTTaxRate__c</fullName>
    <label>SGST Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>